--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Esteban&display=swap');
+
+
+*{
+    box-sizing: border-box;
+    font-family: 'Esteban', serif;
+}
+
 #overlay {
     display: block;
     position: fixed;
@@ -5,7 +13,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity here */
+    background-color: grey;
+    opacity: 0.5;
     z-index: 1;
 }
 
@@ -15,8 +24,49 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
+    background-color: #6d63da;
+    padding: 1.5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     z-index: 2;
+    height: fit-content;
+    width: 20rem;
+}
+
+#modal_content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+h2{
+    color: #df8c70;
+    font-size: 1.7rem;
+    margin-bottom: 1.5rem;
+}
+
+input[type="text"]{
+    color: #df8c70;
+    font-size: 1.3rem;
+    margin-bottom: 1.5rem;
+    border-radius: 60px;
+    padding: 1rem;
+    text-align: center;
+    border: none;
+}
+
+button[type="submit"]{
+    font-size: 1rem;
+    padding: 1rem;
+    border-radius: 60px;
+    border: none;
+    color: #9d64d7;
+}
+
+
+span{
+    color: #9d64d7;
+}
+
+em{
+    color: #df8c70;
 }
