--- a/public/css/index.css
+++ b/public/css/index.css
@@ -64,6 +64,7 @@ button[type="submit"] {
     border-radius: 60px;
     border: none;
     color: #9d64d7;
+    cursor: pointer;
 }
 
 h1 {
@@ -84,25 +85,25 @@ h1 {
     padding: 1.3rem;
     font-size: 3.5rem;
     margin: 0.5rem;
-    border-radius: 100%;
-    border: none;
+    border-radius: 100px;
+    border: 3px solid #6d63da;
     cursor: pointer;
 }
 
 .symbol_button:hover {
-    border-radius: 100%;
+    border-radius: 100px;
     transform: translateY(-10px);
-    box-shadow: 0 7px 0 -2px #f85959,
-     0 15px 0 -4px #39a2db,
-     0 16px 10px -3px #39a2db;
+    box-shadow: 0 7px 0 -2px #c861c8,
+     0 15px 0 -4px #6d63da,
+     0 16px 10px -3px #6d63da;
    }
    
    .symbol_button:active {
     transition: all 0.2s;
     transform: translateY(-5px);
-    box-shadow: 0 2px 0 -2px #f85959,
-     0 8px 0 -4px #39a2db,
-     0 12px 10px -3px #39a2db;
+    box-shadow: 0 2px 0 -2px #c861c8,
+     0 8px 0 -4px #6d63da,
+     0 12px 10px -3px #6d63da;
    }
 
 span {
@@ -124,6 +125,7 @@ strong {
     text-align: center;
     justify-content: center;
     padding: 0.5rem;
+    color: #c861c8;
 }
 
 #displays_list li{
@@ -137,31 +139,88 @@ strong {
     border-radius: 60px;
 }
 
-/* #outputDisplay_game {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    text-align: center;
-    width: 100%;
-    padding: 1.4rem;
-    margin-bottom:1rem ;
-    border: 5px solid #c861c8;
-    border-radius: 60px;
-} */
-
-/* #playerScoreDisplay, 
-#robotScoreDisplay, 
-#sparScoreDisplay,
-#roundsPlayedDisplay{
-    font-size: 1.5rem;
-    padding: 1.5rem;
-    border-radius: 60px;
-    margin: 0.5rem;
-    width: 100%;
-} */
+li#results {
+    border: 5px solid #df8c70;
+}
 
 footer {
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
     font-family: 'Esteban', serif;
     color: #c861c8;
+}
+
+/* Développement en Mobile First : Mobile Portrait ⬆️⬆️⬆️*/
+/* Styles pour les écrans de 767 pixels de largeur ou moins (portrait) */
+
+/* Mobile Paysage */
+/* Styles pour les écrans entre 768 et 991 pixels de largeur (paysage) */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+    h1{
+        font-size: 2.8rem;
+        line-height: 2.8rem;
+        margin: 1rem;
+    }
+
+    .symbol_button  {
+    margin: 0rem 1.5rem;
+    }
+
+    #displays_list li{
+        font-size: 1.5rem;
+        width: 60%;
+    }
+
+    footer{
+        font-size: 1.4rem;
+    }
+}
+
+/* Tablette */
+/* Styles pour les écrans entre 992 et 1199 pixels de largeur (tablettes) */
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+
+    h1{
+        font-size: 3rem;
+        line-height: 2.8rem;
+        margin: 1rem;
+    }
+
+    .symbol_button  {
+    margin: 0rem 1.5rem;
+    }
+
+    #displays_list li{
+        font-size: 1.5rem;
+        width: 60%;
+    }
+
+    footer{
+        font-size: 1.6rem;
+    }
+}
+
+
+/* Écran standard */
+/* Styles pour les écrans de 1200 pixels de largeur ou plus (écrans standard) */
+@media only screen and (min-width: 1200px) {
+    h1{
+        font-size: 3rem;
+        line-height: 2.8rem;
+        margin: 1rem;
+    }
+
+    .symbol_button  {
+    margin: 0rem 1.5rem;
+    }
+
+    #displays_list li{
+        font-size: 1.5rem;
+        width: 60%;
+    }
+
+    footer{
+        font-size: 1.6rem;
+    }
 }
